--- a/FinalDraft/main.tex
+++ b/FinalDraft/main.tex
@@ -19,7 +19,7 @@
 %\CopyrightYear{2007} % Allows default copyright year (20XX) to be over-ridden-IF NEED BE.
 %\crdata{0-12345-67-8/90/01}  % Allows default copyright data (0-89791-88-6/97/05) to be over-ridden-IF NEED BE.
 % --- End of Author Metadata ---
-\title{Visualization of Worldwide Internet Traffic and Routers}
+\title{An Exploration into the Connectivity and Technology Creating the Internet Worldwide}
 %
 % You need the command \numberofauthors to handle the 'placement
 % and alignment' of the authors beneath the title.
@@ -89,7 +89,7 @@
 \maketitle
 
 \begin{abstract}
-    The motivation for this project is to provide an accessible representation of traffic throughout the Internet, which will clearly illustrate the distribution of routers and the usage/workload corresponding to each. This representation will be geographically aligned in a way so that the physical location of each router on the globe is correctly represented. Color coding and scaling thickness will aid in the aesthetic representation of this data.
+    There is much interest by the general public in determining which factors have built or limited the modern Internet. The purpose of this paper is to represent the connectivity and physical media used throughout the Internet and explore the topology of international networks. This purpose is achieved through research and experimentation into Internet Service Provider (ISP) network maps, country demographics, and software tools for worldwide Internet routing. Among these software tools are IP2Location and BGPlay. This paper also explores the contributions of politics to the global Internet connectivity and generalizes upon the routing patterns observed between worldwide domestic and international ISPs servicing both edge and transit core networks.
 \end{abstract}
 
 \section{Introduction}
@@ -98,32 +98,55 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 Lorem ipsum dolor sit amet, consectetur\cite{einstein} adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit\cite{knuthwebsite} in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
+\section{Related Work}
+
+Tannenbaum and Wetherall \cite{tannenbaum} identify the basic architecture of connectivity between routers and destination hosts on the Internet and their associated interior and exterior gateway protocols used for the intradomain and interdomain routing. Open Shortest Path First (OSPF) and Intermediate-System (IS-IS) are the common protocols used for intradomain routing in company networks and ISP networks, respectively. The properties of load balancing and hierarchical support of these protocols are relevant to our research. Each independent network is called an autonomous system (AS), and each AS can be divided into multiple areas. Every AS has a backbone area which contains the routers to connect to all the peripheral areas. Area border routers connect multiple areas and AS boundary routers connect multiple ASes. With the division into areas and ASes, intradomain networks can stretch long distances geographically. Due to the politics involved with interdomain routing, an exterior gateway protocol, the Border Gateway Protocol (BGP) is used to route between foreign ASes. BGP supports peering between neighboring foreign ASes as well as transit through a higher-level ASes.  
+
+Cheswick and Burch \cite{ches} collected Traceroute data of more than a hundred thousand nodes of the Internet in June of 1999. Their Traceroute program sent out small datagram (UDP) packets, with different hop counts set for each packet’s time-to-live (TTL) field of the header. With each hop, the TTL was decremented until reaching zero. At the TTL of zero, the receiving node returned an Internet Control Message Protocol (ICMP) packet to their sender reporting “TTL exceeded.” Cheswick and Burch’s Traceroute interpreted these ICMP error reporting packets as hop information for their data collection scheme. While most of the ICMP packets were successfully received by their Traceroute, some packets failed to return due to timeouts and firewalls along the way. They were blindly sending packets to the large list of numerical addresses without any expectation of packets reaching working hosts or UDP services, but ICMP returned information for each successful hop. Although their list of destination addresses lacked context, the routes they were able to trace were very insightful in planning our research for this paper. Cheswick and Burch documented their Traceroute results well which helped us interpret the results in the Traceroute program for our research.
+
+The Traceroute program used in this research also used tracing via ICMP response packets. However, the packets sent were TCP/IP packets bound for active Web servers hosting web sites. Therefore, a Web page was expected through a Web browser on the sending host if the connection to the IP address was successful. Cheswick and Burch’s documentation of Traceroute was very useful. They documented three possible successful hop IP address details that could be received through the Domain Name System (DNS). If the domain name associated with the IP address of the router on the hop is available, Traceroute shows the domain name, and these domain names contain ISP identification details. If the domain is not configured, Traceroute clearly states so but still gives the IP address. Otherwise, only an IP address of the hop is returned, meaning that it is not associated to any domain name.
+
+Cheswick and Burch visualized their data on several graphs of color-coded nodes and links. A graph was visualized for each of the following four metrics: distance from the test host, ISP name, top-level domain name, and city-state. Their graphs, although now outdated, effectively portray the topology and organization of the different networks on the Internet in 1999. Their visualizations served as inspiration for our research in mapping the Internet of 2015, a time in which more meaningful metrics can be measured of the Internet as the Internet has become an ubiquitous tool for people and software alike on a worldwide scale. Their 1999 graphs show widespread networks including AT&T at the time as having a foundation with a backbone whereas other networks including Vodafone (cw.net) taking on star formations with all communication transiting through central regional routers. Just as Cheswick and Burch found regional hotspots to identify network organizations in 1999, our research also focused on identifying hotspots in the Internet of 2015, a time where more ISPs are connecting the Internet with more nodes to sample. 
+
+From May 1 to May 10, 1999, Cheswick and Burch monitored the reach of the Internet in Yugoslavia during the Serbian war. Nodes were disappearing and reappearing daily with their Traceroute monitoring as sections of the power grid were lost and restored in Serbia and Bosnia throughout the war. Erection of firewalls and privacy has the same effect on connectivity in 2015 as we observed in our research.
+
+The Internet Architecture Board (IAB) not only has identified an Internet scalability problem with the current address space, but also has identified significant disadvantages with switching to IPv6. The two solutions they do give to solving the problem are separation of edge networks or elimination through multihoming the edge networks \cite{scalability}. The separation solution involves adding a layer between the edge network and the transit core while the elimination solution requires edge networks to accept addresses from their providers.
+
+Many ISPs include a map of their network on their Web sites showing their data centers and the types of physical media used to connect them. Some studies have generated maps showing network or population statistics while other studies have taken different approaches to map all the connections on the Internet from a particular point of view. A particular study used ICMP ping, nmap port scans, reverse DNS records, and traceroute records to determine that over 3.7 billion hosts exist on the Internet , but authenticity of the data was a serious concern \cite{botnet}. We took authenticity of our data collected as a critical factor by cross-checking across multiple sources. This study also emphasized the interest of the general public in capturing the size of the Internet. This public interest appreciates the value of the field of research of routing across the worldwide Internet.
+
 \section{Research Methodology}
 
-Our first step is to determine a set of source and destination IP addresses with which we can conduct our traceroute operations in order to gather relevant data for analysis. These addresses are retrieved using a script that parses and aggregates URLs from university websites worldwide. Our second step is to use a script of our own design to pull from the addresses and execute the traceroute command, returning the IP address of each router along the route from the source IP address to the destination IP address. Our third step is to use another custom script which utilizes a publically available API that can automate the process of determining the geographic location of all the collected IP addresses. Our fourth step is to put the data into an easily accessible format, as well as begin our interim draft.  
+This sections describes the tools and procedure used to collect and analyze ISP and routing data in order to produce a visualization of the Internet to every country and continent which shows the topology, material, and routing involved.
 
-Our fifth step is to determine a background graphic for the world map onto which we will project the router traffic infographic. During this step we will also develop a legend for the map, and finalize any stylistic choices. Our sixth step is to add the routers onto the map. Depending on their traffic and location, separate sizes and colors of icons will be used. Our seventh step is to add the connections between the routers to the map. Depending on their traffic and location, separate sizes and line thicknesses will be used. Our eighth step is to analyze and draw conclusions from the data we collected and the resulting map graphic. Our final step is to write the project report.
+\subsection{Source and Destination Selection}
+In order to map the worldwide Internet, a list of IP addresses of servers in each country in the world was required. Therefore, we chose a list of URLs of the Web sites of universities in every country provided by Univ.cc [3]. We targeted university Web sites over commercial Web sites since universities are more likely to have their Web servers in-house whereas commercial Web sites mostly outsource their server needs. Each country’s list from Univ.cc is proportional to the country’s area. For example, larger countries like Argentina have 83 URLs while a smaller country like Andorra has only 1 university.  
 
+After the URLs were collected, the next task was to determine the Internet routing to each of the university URLs. The IP2Location Traceroute [4] software converts these URLs to their respective IP addresses and determines the route to each of the IP addresses from the IP address of the chosen IP2Location host server. The IP2Location Traceroute application allows users to choose a server either in the United States (Phoenix, Dallas, or Los Angeles), Canada (Montreal), Israel (Tel Aviv), France (Paris), Germany (Dusseldorf), Netherlands (Amsterdam), England (London), Singapore, Japan (Tokyo), or Malaysia (Kuala Lumpur), a total of twelve servers in ten countries on three continents. The source server IP addresses are available, and these IP addresses would become the destinations for our bidirectional route trace attempts using worldwide VPN software tools available to us.
 
-\section{Previous Work}
+The Center for Applied Internet Data Analysis (CAIDA) ranks several global ISPs along with their AS numbers. These AS numbers were applied in our experiment to Daniel Austin’s BGP Lookup Tool to achieve an IP prefix which was then supplied to the BGPlay tool. CAIDA’s ranked table of ISPs and their AS numbers provided the starting nodes for our BGP research. The top AS numbers were converted to IP prefixes through Austin’s BGP lookup tool which are the parameters used in BGP routing.
 
-William Cheswick and Hal Burch created the "Internet Mapping Project" in 1997 at Bell Labs, which since 1998 has collected traceroute data of more than a hundred thousand networks every day. While the project includes a visualization of the data, its main purpose is to display the growth of the internet over time. Our project will instead focus on the traffic and routers of the internet in its current state, and the projection of the data upon a map of the world, something the Internet Mapping Project does not include. \footnote{Cheswick, William. "The Internet Mapping Project"}
+\subsection{Software Tools}
+IP2Location provided each node’s city, state, and country of physical location. We authenticated IP2Location's database as containing physical locations by checking controversial offshore island URLs and Antarctica IP addresses both on the IP2Location and the RIPE databases. Some software packages misinterpret a company headquarter location as the server's physical location or incorrectly approximates the location simply by the IP address.  
 
-Co-founder of Wired Magazine, Kevin Kelly, also started an "Internet Mapping Project", however his was a crowd-sourced image slide-show of how different people view the Internet. The images were a mix of conceptual, concrete, and comic. The project was a piece of artwork and not an informative map based on actual data.\footnote{http://kk.org/mt-files/internet-mapping/index.html}
+With accurate worldwide location information available to us, our aim became to originate the Traceroute from a few countries but reach all the countries with plans to trace the networks of all the major global ISPs and their hotspot cities.
 
-In February 2012, H.D. Moore attempted to send a ping to every IP address in the world. His results were surprisingly accurate and gave a good representation of available IP addresses across the globe. There were considerable downsides to his work, such as the complaints from law enforcement and hate mail from individuals not ecstatic about his work. Moore sent out over 3.7 billion outgoing messages, resulting in return messages from over 3 million destination IP addresses,  which equates to over 2 Terabytes worth of data.  Our timeframe and computing resources do not allow for this project to be as extensive as Moore's.\footnote{http://www.technologyreview.com/news/514066/what-happened-when-one-man-pinged-the-whole-internet/}
+IP2Location was an effective tool is determining routes in one direction to each of the countries, but we also wanted to generalize the behavior of routing in the reverse direction from the destination countries to the IP2Location server locations. To do so, we used VisualRoute and HMA Pro VPN. Virtual Private Networks (VPNs) allow remote hosts to connect to resources as if being local on a private network. With the HMA Pro VPN, we were able to access the Internet and run Traceroute from the point of view of a server in any country of our choice with the IP address available to verify the location in IP2Location. VisualRoute is a Traceroute geographical mapping tool  that originates based on our laptops' Internet connection which would be originating in another country with the use of the HMA Pro VPN. 
 
-Two possible resolution directions have appeared to improving the current Internet architecture's scalability problem:  separation from the main transit core and elimination of the edge networks. We may see which is empirically implemented through our research.\footnote{Meisel, D, et al. "Towards A New Internet Routing Architecture: Arguments for Separating Edges from Transit Core." http://conferences.sigcomm.org/hotnets/2008/papers/18.pdf }
+VisualRoute was more effective than IP2Location in identifying firewalls and unresponsiveness en route. However, IP2Location was more knowledgeable in conversion from router IP address to physical location on successful hops. VisualRoute attempted to estimate the location of IP addresses unknown to its database, and IP addresses showing unknown locations and ISPs were common in VisualRoute that were identifiable with IP2Location. Through superimposition of both of the software tools, bidirectional generalizations were possible in both the doubly-connected cases and the singly-connected cases where firewalls and privacy were involved.
 
-There is one popular tool that will help up locate the longitude and latitude of a particular IP address. The developer created a database of CSV files to help users pinpoint any IP address that is within the database. This will come in handy after we execute all traceroute commands and need to fill in our map.\footnote{http://dev.maxmind.com/geoip/legacy/geolite/}
-\section{Resources Needed}
+BGPlay is a JavaScript visualization tool that generates a graph representation of the links within five hops from the source IP prefix. Each of the linking nodes consist of the AS and ISP registration details which were investigated further to determine interdomain connectivity. 
 
-First, an appropriate list of URLs of the web sites of all university in the world is required from each continent. This list can be parsed from the page source of a web site we found (univ.cc). This HTML parser will most likely be self-programmed using JQuery. More research is required in either self-programming or finding a ip route data collection software that can iterate through several traceroute commands. After the traceroute ip routing data has been collected and dumped to a folder  or text file, the major nodes will need to ranked, so a text file parser and analyzer is required which will need to be researched or self-programmed. After the nodes are ranked, an appropriate mapping software still needs to be found. Recommendations would be helpful for the mapping software. This software needs to support different colors of lines and markers as well as including a legend. ShareLatex will be the software used to write our interim and final report drafts.
+These tools allowed us to determine the ISP connections to all the countries of the world. With the ISP data, we were identify the physical media through research into ISP network maps and readily available lists of mobile carriers in each of the different countries.
+ 
 
+\subsection{Measurement Methodology}
+
+Once the major ISPs and their connections were determined from the Graphviz and BGPlay graphs, bubbles were drawn onto the ScribbleMaps visualization to represent the span of operations of the ISPs. Each bubble contained the ISP's name and major cities and countries of operation encapsulated in the bubble. We visited the web site of major ISP to obtain their complete network map with details of the physical media used on their links. Once each link's delay, material, and endpoints were determined, the link was represented as a color-coded and weighted connecting line on the ScribbleMaps visualization. All of the final visualization was handmade using the graphic design tools in ScribbleMaps. All of the computer automation tools available to us were optimal only for formulaic data processing, not for original artistic creation. Additionally, handcrafting the visualization by hand would simplify errors and produce a more aesthetic product.
 %\vfill
 %\columnbreak
 
-\section{Research Plan}
+\section{Research Results}
+This section presents the measurement results for the experimental procedures described in Section 3 and reviews the visualizations shown in in the Appendix. All visualizations show some significant property of Internet connectivity.
 \indent
 \indent 5 February 2015 - Research Proposal Due \\
 \indent 12 February 2015 - Collected Destination URLs \\
